force-app/main/default/objects/Task_Follow_Up_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Assign_To__c</fullName>
        <label>Assign To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Task Owner (Same User)</fullName>
                    <default>true</default>
                    <label>Task Owner (Same User)</label>
                </value>
                <value>
                    <fullName>Task Owner&apos;s Manager</fullName>
                </value>
                <value>
                    <fullName>Record Owner</fullName>
                </value>
                <value>
                    <fullName>Related User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Till_Follow_Up__c</fullName>
        <label>Days Till Follow Up</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Subject__c</fullName>
        <label>Follow-Up Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object_Selection__c</fullName>
        <label>Object Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Any Object</fullName>
                    <default>true</default>
                    <label>Any Object</label>
                </value>
                <value>
                    <fullName>One Specific Object</fullName>
                </value>
                <value>
                    <fullName>Multiple Specific Objects</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_User_Field__c</fullName>
        <label>Related User Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restricted_Object_Value__c</fullName>
        <label>Restricted Object Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_Weekends__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Skip Weekends</label>
        <type>Checkbox</type>
    </fields>
    <label>Task Follow Up Rule</label>
    <language>en_US</language>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Keywords__c</columns>
        <columns>Follow_Up_Subject__c</columns>
        <columns>Days_Till_Follow_Up__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Skip_Weekends__c</columns>
        <columns>Restricted_Object_Value__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Object_Selection__c</columns>
        <columns>Related_User_Field__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Follow-Up Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>