force-app/main/default/objects/Task_Follow_Up_Rule__c/fields/Conditional_Logic_Expression__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Logic_Expression__c</fullName>
    <label>Conditional Logic Expression</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>