force-app/main/default/objects/Task_Follow_Up_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Keywords__c</columns>
    <columns>Follow_Up_Subject__c</columns>
    <columns>Days_Till_Follow_Up__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Skip_Weekends__c</columns>
    <columns>Restricted_Object_Value__c</columns>
    <columns>Assign_To__c</columns>
    <columns>Object_Selection__c</columns>
    <columns>Related_User_Field__c</columns>
    <columns>Conditional_Logic_Expression__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>